menu button fixed on small screen

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     --weddingRentalMauve: 213, 182, 174, .87;
     --mauveFooter: 213, 182, 174, 1;
     --bodyBackgroundFade: 117, 50, 54;
-    --footerFade: 213, 182, 174, .05;
+    --footerFade: 255, 255, 255, .01;
 }
 
 
@@ -20,7 +20,7 @@ html {
 }
 
 #grad1 {
-  background-image: radial-gradient(circle at center, rgba(256,256,256,1), rgba(var(--bodyBackgroundFade), .08));
+  background-image: radial-gradient(circle at center, rgba(256,256,256,1), rgba(var(--bodyBackgroundFade), .09));
   background-size: cover;
   position: relative;
 }
